--- a/FoundIt/Base.lproj/Main.storyboard
+++ b/FoundIt/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4514" systemVersion="13C64" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="gnB-pS-kkW">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4514" systemVersion="12F45" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="gnB-pS-kkW">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3747"/>
     </dependencies>
@@ -86,7 +86,7 @@
             </objects>
             <point key="canvasLocation" x="1248" y="-175"/>
         </scene>
-        <!--Match View Controller-->
+        <!--Match View Controller - Matches-->
         <scene sceneID="8Rf-Bt-A0I">
             <objects>
                 <tableViewController storyboardIdentifier="match" id="qtQ-lx-P8h" customClass="MatchViewController" sceneMemberID="viewController">
@@ -96,7 +96,7 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
                             <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="P4L-Xc-SRL">
-                                <rect key="frame" x="0.0" y="22" width="320" height="44"/>
+                                <rect key="frame" x="0.0" y="86" width="320" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="P4L-Xc-SRL" id="QsT-Ge-IGh">
                                     <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
@@ -109,11 +109,14 @@
                             <outlet property="delegate" destination="qtQ-lx-P8h" id="ZxJ-Ik-u5K"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" id="oiz-Nw-jfH"/>
+                    <navigationItem key="navigationItem" title="Matches" id="oiz-Nw-jfH">
+                        <barButtonItem key="backBarButtonItem" title="Home" id="K9Y-yo-7w2"/>
+                    </navigationItem>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="6oA-39-Dhp" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1632" y="-866"/>
+            <point key="canvasLocation" x="1248" y="-936"/>
         </scene>
         <!--Lost View Controller - Lost-->
         <scene sceneID="c6W-Dn-Iyb">
@@ -579,7 +582,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Mat-KJ-jc5" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2848" y="-175"/>
+            <point key="canvasLocation" x="2401" y="-175"/>
         </scene>
         <!--Items View Controller - Item Type-->
         <scene sceneID="e48-Ia-MhV">
@@ -858,7 +861,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ao4-lw-h4E" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2419" y="-622"/>
+            <point key="canvasLocation" x="2401" y="-936"/>
         </scene>
         <!--Navigation Controller - home-->
         <scene sceneID="KR7-9b-exH">
@@ -1187,6 +1190,7 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
+                        <outlet property="cameraDetailImage" destination="PLY-8a-ofs" id="N40-rg-ufx"/>
                         <outlet property="clearButton" destination="SOo-ka-6x6" id="mzg-D7-9bS"/>
                         <outlet property="colorchange" destination="uzp-FR-G7d" id="u3x-iv-wSA"/>
                         <outlet property="descriptionText" destination="VmJ-tF-aGY" id="2BL-w4-oOE"/>
@@ -1234,7 +1238,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="py0-ym-KJM" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2817" y="605"/>
+            <point key="canvasLocation" x="2401" y="605"/>
         </scene>
         <!--Camera View Controller-->
         <scene sceneID="yX3-eL-NNe">
@@ -1280,7 +1284,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="89G-VJ-nZb" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2401" y="1194"/>
+            <point key="canvasLocation" x="2401" y="1390"/>
         </scene>
     </scenes>
     <resources>
@@ -1304,8 +1308,8 @@
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="aZ4-qj-e60"/>
-        <segue reference="ulB-9R-kuZ"/>
-        <segue reference="3nc-7y-vUT"/>
+        <segue reference="PPK-vR-KWf"/>
+        <segue reference="E01-gi-rUf"/>
+        <segue reference="HJp-w4-J15"/>
     </inferredMetricsTieBreakers>
 </document>
