--- a/FoundIt/Base.lproj/Main.storyboard
+++ b/FoundIt/Base.lproj/Main.storyboard
@@ -127,6 +127,11 @@
                     </tableView>
                     <navigationItem key="navigationItem" title="Matches" id="oiz-Nw-jfH">
                         <barButtonItem key="backBarButtonItem" title="Home" id="K9Y-yo-7w2"/>
+                        <barButtonItem key="rightBarButtonItem" title="Delete Item" id="RrL-QV-YMT">
+                            <connections>
+                                <action selector="deleteLostItem:" destination="qtQ-lx-P8h" id="klF-fy-eHh"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                 </tableViewController>
@@ -134,10 +139,10 @@
             </objects>
             <point key="canvasLocation" x="1248" y="-936"/>
         </scene>
-        <!--Detail View Controller-->
+        <!--Detail View Controller - Item Details-->
         <scene sceneID="o5g-yh-dqJ">
             <objects>
-                <viewController storyboardIdentifier="detail" id="YAQ-Dn-pKQ" customClass="detailViewController" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="detail" title="Item Details" id="YAQ-Dn-pKQ" customClass="detailViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="KfR-5F-CII"/>
                         <viewControllerLayoutGuide type="bottom" id="X8u-ji-eDT"/>
@@ -146,12 +151,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="eiG-WY-ZfU">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                            </scrollView>
                             <segmentedControl opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="Lw7-IR-WHK">
-                                <rect key="frame" x="68" y="96" width="173" height="29"/>
+                                <rect key="frame" x="74" y="96" width="173" height="29"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <segments>
                                     <segment title="Picture"/>
@@ -166,21 +167,31 @@
                                 <rect key="frame" x="0.0" y="132" width="320" height="259"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                             </mapView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="V4d-h9-550">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="V4d-h9-550">
                                 <rect key="frame" x="-3" y="132" width="327" height="259"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" editable="NO" text="Description" translatesAutoresizingMaskIntoConstraints="NO" id="Wm9-Ms-1IM">
-                                <rect key="frame" x="30" y="410" width="248" height="120"/>
+                                <rect key="frame" x="36" y="399" width="248" height="120"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rpd-pP-bds">
+                                <rect key="frame" x="128" y="489" width="65" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="FoundIt!">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="confirmationButton:" destination="YAQ-Dn-pKQ" eventType="touchUpInside" id="PPG-Hv-Dwh"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
-                    <navigationItem key="navigationItem" id="RWQ-61-Xag"/>
+                    <navigationItem key="navigationItem" title="Item Details" id="RWQ-61-Xag"/>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <connections>
                         <outlet property="descriptionLabel" destination="Wm9-Ms-1IM" id="58c-eE-eBs"/>
