--- a/FoundIt/Base.lproj/Main.storyboard
+++ b/FoundIt/Base.lproj/Main.storyboard
@@ -1188,6 +1188,10 @@
                                                     <color key="textColor" red="0.5568627451" green="0.5568627451" blue="0.57647058819999997" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="80" verticalHuggingPriority="80" horizontalCompressionResistancePriority="80" verticalCompressionResistancePriority="80" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="nlR-Rz-q06">
+                                                    <rect key="frame" x="208" y="0.0" width="96" height="80"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                </imageView>
                                             </subviews>
                                         </tableViewCellContentView>
                                         <connections>
@@ -1257,8 +1261,10 @@
                         <outlet property="clearButton" destination="SOo-ka-6x6" id="mzg-D7-9bS"/>
                         <outlet property="colorchange" destination="uzp-FR-G7d" id="u3x-iv-wSA"/>
                         <outlet property="descriptionText" destination="VmJ-tF-aGY" id="2BL-w4-oOE"/>
+                        <outlet property="foundImageView" destination="nlR-Rz-q06" id="vNw-6c-MRg"/>
                         <outlet property="foundLocationCell" destination="TjL-Qg-52H" id="72p-Cu-WT1"/>
                         <outlet property="foundLocationLabel" destination="Fji-je-5iA" id="5yx-Lv-uzL"/>
+                        <outlet property="imageCell" destination="ZMg-ta-YBj" id="A22-nN-x7E"/>
                         <outlet property="itemSelected" destination="mig-Tr-a0R" id="rFe-80-Hp7"/>
                         <outlet property="tableView" destination="zkh-fi-fl7" id="fnw-Iy-gjt"/>
                         <outlet property="turnInCell" destination="CFV-zI-vmK" id="Hwq-Nv-3Gd"/>
@@ -1371,8 +1377,8 @@
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="ulB-9R-kuZ"/>
-        <segue reference="3nc-7y-vUT"/>
-        <segue reference="aZ4-qj-e60"/>
+        <segue reference="E01-gi-rUf"/>
+        <segue reference="HJp-w4-J15"/>
+        <segue reference="PPK-vR-KWf"/>
     </inferredMetricsTieBreakers>
 </document>
